--- a/frontend/history.html
+++ b/frontend/history.html
@@ -18,8 +18,10 @@
    
     <img src="https://cdn.pixabay.com/photo/2016/08/03/21/38/london-1567903_960_720.jpg">
 
-    <h1>
-        <a href="index.html">Back</a>
-    </h1>
+    <div class="BottomButton">
+        <a href="index.html">
+            <img src="file:///C:/Work/Training/BusBoard/Button.png" vspace="20">
+        </a>
+    </div>
   </body>
 </html>
