--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,11 @@
     <div id="results">
         <h2>Please Enter your Postcode!</h2>
     </div>
-    <a href="history.html">History of buses</a>
+
+    <div class="BottomButton">
+      <a href="history.html">
+          <img src="file:///C:/Work/Training/BusBoard/HisButton.png" vspace="20">
+      </a>
+    </div>
   </body>
 </html>
